--- a/app/views/roster_notifier/created.text.erb
+++ b/app/views/roster_notifier/created.text.erb
@@ -1,11 +1,8 @@
-RosterNotifier#created
-
 <%= @event_signup.member.first_name %>, 
 
 
-Your Event Sign Up has been recorded on the website.
+Your <%= @event_signup.event.title %> Sign Up has been recorded on the website.
 
-<%= @event_signup.event.name %>
 <%= @event_signup.event.title %>
 <% if @event_signup.event.start.strftime("%b %d" ) == @event_signup.event.end.strftime("%b %d") %>
     <%= @event_signup.event.start.strftime("%b. %d, %Y") %>,
