updates to formatting of Hold Harmless

--- a/app/assets/stylesheets/print/hh_print.css
+++ b/app/assets/stylesheets/print/hh_print.css
@@ -78,6 +78,10 @@ table {
   line-height: 2em;
 }
 
+.underline {
+  text-decoration: underline
+  }
+
 .table_border { 
     margin: 10px;
     border: solid #000;
