--- a/app/views/event_signups/hold_harmless.html.erb
+++ b/app/views/event_signups/hold_harmless.html.erb
@@ -8,7 +8,7 @@
 <p>This form must be completed in full prior to flight in any CAF aircraft with <em><strong>multiple crewmembers, or when carrying passengers</strong></em>. The pilot-in-command will insure one copy is left with a responsible CAF member or responsible person (FBO or Host) at the point of departure. It is the responsibility of the pilot-in-command to see that these important details are properly completed. <em><strong>For paid rides, a copy of the manifest should be given to the unit finance officer and a copy sent to HQ finance; include membership applications if applicable</strong></em>.</p>
 
 <p class="hh-form">PAID RIDES ON THIS FLIGHT? YES ___ NO ___ Pilot in Command (PRINT) _________________________________________Col. #_________________ <br />
-DATE ____________________ AIRCRAFT TYPE _________________ N _________________￼ AC Category (circle one): Experimental/Limited/Standard<br />
+DATE ____________________ AIRCRAFT TYPE ____<span class="underline">B-25</span>________ N ___<span class="underline">9643C</span>________￼ AC Category (circle one): Experimental/Limited/Standard<br />
 DEPARTURE POINT ______________________ DESTINATION_______________________ Unit contact/ phone number___________________________ <br />
 UNIT NOTES ________________________________________________________________________________________________________________</p>
 <hr />
@@ -18,10 +18,10 @@ UNIT NOTES _____________________________________________________________________
 <table class="table_border">
   <tr>
     <td colspan="2">First and last Name (Print)<br />Check block if crewmember</td>
-    <td>Colonel Number</td>
-    <td>Phone Number</td>
-    <td>Emergency contact name and phone number (Print)</td>
-    <td>I have read, agree with and fully understand this document. Signature</td>
+    <td>Colonel<br />Number</td>
+    <td>Phone<br />Number</td>
+    <td>Emergency contact name and phone number <div style="text-align: center;">(Print)</div></td>
+    <td>I have read, agree with and fully understand this document.<div style="text-align: center; font-weight: bold;">Signature</div></td>
   </tr>
 <% @event_signups.each do |event_signup| %>
   <tr class="<%= cycle('odd_row', 'even_row') %>">
