--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -11,6 +11,8 @@
   <% end %>
 <% end %>
 
+<h1>Location Detail</h1>
+
 <p>
   <b>Name:</b>
   <%= @location.short_name %>
@@ -31,6 +33,10 @@
   <%= @location.longitude %>
 </p>
 
+<p>
+  <b>Distance fm KGTU (nm):</b>
+  <%= @location.one_way_distance %>
+</p>
 
 <%= link_to 'Edit', edit_location_path(@location) %> |
 <%= link_to 'Back', locations_path %>
