update to pdf path

--- a/app/views/pages/seventieth_birthday_party.html.erb
+++ b/app/views/pages/seventieth_birthday_party.html.erb
@@ -83,7 +83,7 @@
 
 <div style="float: right; margin: 0 0 1em 1.5em;">
   <a href="assets/Devil_Dog_70th_Invite.pdf"><%= image_tag "/assets/dd_birthday_flyer.jpg" %></a>
-  <div style="text-align: center;"><em><%= link_tag "click for pdf", "assets/Devil_Dog_70th_Invite.pdf" %></em></div>
+  <div style="text-align: center;"><em><%= link_to "click for pdf", "assets/Devil_Dog_70th_Invite.pdf" %></em></div>
 </div>
 
 <p><strong>The Devil Dog</strong> is a vintage WWII Marine Corps 825 medium-range bomber being maintained by the <em>Devil Dog Squadron</em> of the <em>Commemorative Air Force</em> right here in Georgetown, Texas!</p> 
