removed pdf links

--- a/app/views/pages/seventieth_birthday_party.html.erb
+++ b/app/views/pages/seventieth_birthday_party.html.erb
@@ -82,8 +82,7 @@
 <hr />
 
 <div style="float: right; margin: 0 0 1em 1.5em;">
-  <a href="assets/Devil_Dog_70th_Invite.pdf"><%= image_tag "/assets/dd_birthday_flyer.jpg" %></a>
-  <div style="text-align: center;"><em><%= link_to "click for pdf", asset_path("Devil_Dog_70th_Invite.pdf") %></em></div>
+  <%= image_tag "/assets/dd_birthday_flyer.jpg" %>
 </div>
 
 <p><strong>The Devil Dog</strong> is a vintage WWII Marine Corps 825 medium-range bomber being maintained by the <em>Devil Dog Squadron</em> of the <em>Commemorative Air Force</em> right here in Georgetown, Texas!</p> 
@@ -99,8 +98,6 @@
 <h2>Guest Speaker: Lt. Col. Huie Lamb, USAF (Ret) - WWII Ace</h2>
 
 <p>Huie Lamb flew more than 200 combat hours on 61 missions. He was stationed at Duxford Air Base, near Cambridge England from August 1944 through October 1945. He flew P-47s and then P-51s.</p>
-
-<p><a href="assets/Huie_Lamb_Duxford_Trip_Report_5.20.14.pdf">Read more about Huie Lamb and a recent return visit to the Duxford Air Base.</a></p>
 
 <%= image_tag "/assets/Huie_P_47_sm.jpg" %>
 
