added wish list

--- a/app/views/pages/seventieth_birthday_party.html.erb
+++ b/app/views/pages/seventieth_birthday_party.html.erb
@@ -7,8 +7,25 @@
   <%= image_tag "/assets/bdc_logo.png" %>
   <%= image_tag "/assets/ap_logo.png" %>
 </div>
+<div style="background: #ffffe6; border: 1px solid #ffffb3; padding: 0.5em 0; margin: 1em 0; width: 100%;">
+<h3 style="padding: 0 0.5em;">Birthday Wish List</h3>
+<ul>
+  <li>Dzus tool 'Snoopy' variety</li>
+  <li>Micro-fiber windshield cleaning towels</li>
+  <li>Leather for wrapping around the yokes</li>
+  <li>New foam for the student seats</li>
+  <li>New dzus fasteners to replace some on the panels</li>
+  <li>The Bomb needs a 'donations accepted' sign.  How about a tattered wood one with hand-painted lettering - "Dogpatch" style.</li>
+  <li>Paper Towels</li>
+  <li>Donations for Paint</li>
+  <li>Soft washing brushes</li>
+  <li>SprayWay ammonia free glass cleaner</li>
+  <li>Polish compound for the spinner</li>
+  <li>Wax for the airplane to keep the new paint shiny</li>
+  <li>28 volt turn and bank indicator</li>
+</ul>
+</div>
 <% end %>
-
 
 <div class="row" style="margin: 0.5em 0;">
   <div class="cell">
