--- a/app/views/pages/seventieth_birthday_party.html.erb
+++ b/app/views/pages/seventieth_birthday_party.html.erb
@@ -116,6 +116,8 @@
 
 <p>Huie Lamb flew more than 200 combat hours on 61 missions. He was stationed at Duxford Air Base, near Cambridge England from August 1944 through October 1945. He flew P-47s and then P-51s.</p>
 
+<p><a href="/assets/Huie_Lamb_Duxford_Trip_Report_5.20.14.pdf">Read more about Huie Lamb and a recent return visit to the Duxford Air Base.</a></p>
+
 <%= image_tag "/assets/Huie_P_47_sm.jpg" %>
 
 <p style="text-align: center;"><em>Huie Lamb with P-47</em></p>
