--- a/app/views/event_signups/frequent_flyers.html.erb
+++ b/app/views/event_signups/frequent_flyers.html.erb
@@ -3,9 +3,9 @@
 
 <h1>Frequent Flyers</h1>
 
-<table>
+<table width="500" class="table_border">
 <% @ff.each do |ff| %>
-<tr>
+<tr class="<%= cycle('odd_row', 'even_row') %>">
   <td><%#= link_to ff.first_name + ' ' + ff.last_name, frequent_flyer_detail_path(ff.member_id) %>
   <%= ff.first_name + ' ' + ff.last_name %></td>
   <td><%= number_with_delimiter(ff.total.to_i) %></td>
