--- a/app/views/event_signups/frequent_flyers.html.erb
+++ b/app/views/event_signups/frequent_flyers.html.erb
@@ -4,11 +4,15 @@
 <h1>Frequent Flyers</h1>
 
 <table width="500" class="table_border">
+<tr>
+  <th>Name</th>
+  <th>FF Miles</th>
+</tr>
 <% @ff.each do |ff| %>
 <tr class="<%= cycle('odd_row', 'even_row') %>">
   <td><%#= link_to ff.first_name + ' ' + ff.last_name, frequent_flyer_detail_path(ff.member_id) %>
   <%= ff.first_name + ' ' + ff.last_name %></td>
-  <td><%= number_with_delimiter(ff.total.to_i) %></td>
+  <td style="text-align: right;"><%= number_with_delimiter(ff.total.to_i) %></td>
 </tr>
 <% end %>
 </table>
