added function to rotate header images

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,8 +7,7 @@
 
 <!-- CLOSE header_logo CONTAINER -->
 </div>
-<%= image_tag("header_home_2.jpg", :width => "687", :height => "140", :border => "0", :alt => "flying high") %>
-
+<%= image_tag("headers/" + random_image) %>
 <div id="navbox">
 
 <ul id="nav">
