added description with link to website

--- a/app/views/events/member_feed.ics.erb
+++ b/app/views/events/member_feed.ics.erb
@@ -12,6 +12,7 @@ DTSTART;TZID=US/Central:<%= event.start.strftime("%Y%m%dT%H%M%S") %>
 DTEND;TZID=US/Central:<%= event.end.strftime("%Y%m%dT%H%M%S") %>
 SUMMARY:<%= event.title.titleize %> | <%= event.event_type.title %>
 LOCATION:<%= event.location.short_name %>
+DESCRIPTION: http://devildogsquadron.com/events/<%= event.id %>
 END:VEVENT
 <% end %>
 END:VCALENDAR
