--- a/app/views/events/member_feed.ics.erb
+++ b/app/views/events/member_feed.ics.erb
@@ -10,7 +10,7 @@ UID:<%= event.id %>
 DTSTAMP:<%= Time.now.strftime("%Y%m%dT%H%M%SZ") %>
 DTSTART;TZID=US/Central:<%= event.start.strftime("%Y%m%dT%H%M%S") %>
 DTEND;TZID=US/Central:<%= event.end.strftime("%Y%m%dT%H%M%S") %>
-SUMMARY:<%= event.title.titleize %> | 
+SUMMARY:<%= event.title.titleize %> | <% if event.event_statuses_id == 2 %><span class="error" style="display: inline;"> -- Tentative</span><% elsif event.event_statuses_id == 3 %><span class="error" style="display: inline;"> -- Canceled</span><% end %>
 LOCATION:<%= event.location.short_name %>
 DESCRIPTION: More Info: http://devildogsquadron.com/events/<%= event.id %>
 END:VEVENT
