--- a/app/views/pages/_hp_sponsors.html.erb
+++ b/app/views/pages/_hp_sponsors.html.erb
@@ -8,7 +8,7 @@
       <table width="100%" border="0"> 
         <tr> 
           <td><div align="center"><a href="http://www.mitchellproducts.com/"><img src="assets/Mitchell_Logo_sm.gif" width="98" height="25" border="0" /></a></div></td> 
-          <td colspan="2"><div align="center"><a href="http://www.ps-engineering.com/"><img src="assets/pse_logo.jpg" width="141" height="38" /></a></div></td> 
+          <td colspan="2"><div align="center"><a href="https://www.foreflight.com/"><img src="assets/foreflight-logo-large.png" width="140" height="45" border="0" /></a></div></td> 
           <td><div align="center"><img src="assets/concorde_sm.jpg" width="103" height="24" /></div></td> 
         </tr> 
         <tr> 
@@ -17,8 +17,9 @@
           <td><div align="center"><a href="http://www.lightspeedaviation.com"><img src="assets/LS_Logo_Black_119x18.jpg" width="119" height="18" border="0" /></a></div></td> 
         </tr> 
         <tr> 
-          <td colspan="2"><div align="center"><img src="assets/abilogo_sm.jpg" width="163" height="32" /></div></td> 
-          <td colspan="2"><div align="center"><a href="http://www.xmwxweather.com/"><img src="assets/xm_wx.jpg" width="88" height="40" /></a></div></td> 
+          <td><div align="center"><a href="http://www.xmwxweather.com/"><img src="assets/xm_wx.jpg" width="88" height="40" /></a></div></td> 
+          <td colspan="2"><div align="center"><a href="http://www.ps-engineering.com/"><img src="assets/pse_logo.jpg" width="141" height="38" /></a></div></td> 
+          <td><div align="center"><img src="assets/abilogo_sm.jpg" width="163" height="32" /></div></td> 
         </tr> 
       </table>
 <!-- CLOSE left-column-box CONTAINER -->
