--- a/app/views/terms/show.html.erb
+++ b/app/views/terms/show.html.erb
@@ -16,4 +16,5 @@
 </p>
 
 <%= link_to 'Edit', edit_term_path(@term) %> |
-<%= link_to 'Back', terms_path %>
+<%= link_to 'Back', terms_path %> |
+<%= link_to 'Delete', @term, :confirm => 'Are you sure?', :method => :delete %>
