--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -682,39 +682,58 @@ img.fr {
   background:  url("/assets/calendar_graphic.jpg") no-repeat top left;
   }
 
-#calendar_month {
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  margin: -5px 0 0 0;
-  padding-top: 0px;
-  color: #fff;
+.calendar-css {
+  float: left;
+  width: 97px;
+  height: 94px;
+  background: #fff;
+  margin: 0 0 0.5em;
+  border: 1px solid #333;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
   }
 
-#calendar_date {
+.calendar_month {
   text-align: center;
-  font-size: 48px;
+  font-size: 2em;
   font-weight: bold;
-  margin: 9px 0 0 0;
+  line-height: 14px;
+  margin: 0 0;
+  padding: 0em 0;
+  color: #fff;
+  background: #cc0000;
+  }
+
+.calendar_date {
+  text-align: center;
+  font-size: 3.2em;
+  font-weight: bold;
+  margin: 0.3em 0 0 0;
   padding-top: 0px;
   color: #000;
   }
 
-#calendar_year {
+.calendar_year {
   text-align: center;
-  font-size: 10px;
+  font-size: 0.8em;
   font-weight: bold;
-  padding-top: 3px;
+  padding-top: 0;
   color: #fff;
+  background: #cc0000;
+  border-radius: 5px 5px 0px 0px;
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 5px 5px 0px 0px;
   }
 
-#calendar_day {
+.calendar_day {
   text-align: center;
   font-size: 10px;
   font-weight: bold;
-  margin: -2px 0 0 0;
+  margin: -1px 0 0 0;
   padding-top: 0px;
   color: #fff;
+  background: #cc0000;
   }
 
 .social_icons {
