adding models for knowledge tests

--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -825,6 +825,10 @@ input, textarea {
   color: #333;
 }
 
+.answer_fields {
+  margin: 0 0 0 3em;
+  }
+
 /*-----------------------------------------------------
   Hold Harmless
 --------------------------------------------------------*/
