--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <div class="form_row">
   <div class="form_cell">
@@ -29,10 +28,10 @@
 
 <div class="form_row">
   <div class="form_cell">
-    <p><b>Photo path:</b> <%= @product.photo_path %></p>
+    <p><b>Photo path:</b> <% if @product.photo_path? %><%= @product.photo_path %><% end %></p>
   </div>
   <div class="form_cell">
-    <%= image_tag  @product.photo_path, :width => "320", :height => "213", :border => "0" %>
+    <% if @product.photo_path? %><%= image_tag  @product.photo_path, :width => "320", :height => "213", :border => "0" %><% end %>
   </div>
 </div>
 
